<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:id="@+id/tvInstructions1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvInstructions1"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="17dp"/>

        <TextView
            android:id="@+id/tvQns1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvQns1" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvInstructions2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvInstructions3"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/tvQns2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvQns1" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes"/>

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvInstructions3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvInstructions4"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="17dp"/>

        <TextView
            android:id="@+id/tvQns3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvQns1" />

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvInstructions4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvInstructions5"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="17dp"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button" />


    </LinearLayout>
</ScrollView>